Added feature to discard cards on backend
