# types/Game.ts
@@ -22,7 +22,8 @@ export interface Game {
     betweenRounds: number;
   };
   specialRules: {
-    aiPlayerCount: 0 | 1 | 2 | 3;
+    aiPlayerCount: 0 | 1 | 2 | 3;
+    allowDiscarding: boolean;
   };
 }
 
